# aoe2_stats

./: .gitignore  pyproject.toml
aoe2_stats/: aoe.sh  config.ini  data_pre.sh  data_preprocessing.py  eda.py
data/: aoe-matchups-metadata.json  building_masterdata.csv  research_masterdata.csv  unit_masterdata.csv
