[tool.poetry]
name = "aoe2-stats"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
duckdb = "^0.10.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
